meja/tests/implicits-fail.stderr
File "tests/implicits-fail.meja", line 5, characters 14-36:
Error: Could not find an instance for an implicit variable of type
       showable(int).
